Completed 8 queries and charts for them

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
                 <a href="javascript:void(0)" id="user_info"><li>User Information</li></a>
                 <a href="javascript:void(0)" id="daily_quiz_class_subject"><li>Daily quizzes (on the basis of class and subject)</li></a>
                 <a href="javascript:void(0)" id="daily_quiz_count"><li>Daily quizzes</li></a>
-                <a href="javascript:void(0)" id="daily_user_count_quiz"><li>Daily Users</li></a>
+                <a href="javascript:void(0)" id="daily_user_class_subject"><li>Daily Users (on the basis of class and subject)</li></a>
+                <a href="javascript:void(0)" id="daily_users_count_quiz"><li>Daily Users</li></a>
+                <a href="javascript:void(0)" id="quiz_played_per_user"><li>No of quizzes played per user</li></a>
         </ul>
     </div>
 
+    <div>
+        <h1 id="title" style="display:none"></h1>
+    </div>
     <div id="date" style="display: none">
         <label>Start Date</label>
         <input type="date" id="startDt">
