--- a/index.html
+++ b/index.html
@@ -1,54 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data Visualization</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="main.js"></script> 
+<title>FlipLearn Data Analysis</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<script src="main.js"></script>
 </head>
-<body>
-    
-    <div id="list" class="w3-ul card">
-        <ul>
-                <h3 class="w3-center">Click on the Option you want to select</h3>
-                <a href="javascript:void(0)" id="school_range"><li>School Range</li></a>
-                <a href="javascript:void(0)" id="school_strength"><li>School Strength</li></a>
-                <a href="javascript:void(0)" id="user_info"><li>User Information</li></a>
-                <a href="javascript:void(0)" id="daily_quiz_class_subject"><li>Daily quizzes (on the basis of class and subject)</li></a>
-                <a href="javascript:void(0)" id="daily_quiz_count"><li>Daily quizzes</li></a>
-                <a href="javascript:void(0)" id="daily_user_class_subject"><li>Daily Users (on the basis of class and subject)</li></a>
-                <a href="javascript:void(0)" id="daily_users_count_quiz"><li>Daily Users</li></a>
-                <a href="javascript:void(0)" id="quiz_played_per_user"><li>No of quizzes played per user</li></a>
-                <a href="javascript:void(0)" id="daily_time_spent_user_quiz"><li>Daily Time Spent per User</li></a>
-                <a href="javascript:void(0)" id="daily_time_per_user_class_subject"><li>Daily Time Spent per User(on the basis of class and subject)</li></a>
-        </ul>
-    </div>
+<body style="background-color:lavender;">
 
-    <div>
-        <h1 id="title" style="display:none"></h1>
-    </div>
-    <div id="month" class="w3-container w3-center"style="display: none; width: 20%">
-        <label>Start Month</label>
-        <input class="w3-input" type="month" id="startMonth">
-        <label>End Month</label>
-        <input class="w3-input" type="month" id="endMonth">
-        <button id="btn2" class="w3-button w3-black">Submit</button>
-    </div>
-    <div id="date" class="w3-container w3-center" style="display: none; width: 20%">
-        <label>Start Date</label>
-        <input class="w3-input" type="date" id="startDt">
-        <label>End Date</label>
-        <input class="w3-input" type="date" id="endDt">
-        <button id="btn" class="w3-button w3-black">Submit</button>
-    </div>
+<div class="container-fluid">
+  <h1>Data Analysis!</h1>
+  <div class="row" id="list">
+    <div class="col-sm-3" style="background-color:lavender;">
+		<div class="list-group" style="margin:20px 0;">
+			<a href="javascript:void(0)" id="school_range" class="list-group-item">School Range</a>
+			<a href="javascript:void(0)" id="school_strength" class="list-group-item">School Strength</a>
+			<a href="javascript:void(0)" id="user_info" class="list-group-item">User Information</a>
+			<a href="javascript:void(0)" id="daily_quiz_class_subject" class="list-group-item">Daily quizzes (on the basis of class and subject)</a>
+			<a href="javascript:void(0)" id="daily_quiz_count" class="list-group-item">Daily quizzes</a>
+			<a href="javascript:void(0)" id="daily_user_class_subject" class="list-group-item">Daily Users (on the basis of class and subject)</a>
+			<a href="javascript:void(0)" id="daily_users_count_quiz" class="list-group-item">Daily Users</a>
+			<a href="javascript:void(0)" id="quiz_played_per_user" class="list-group-item">No of quizzes played per user</a>
+			<a href="javascript:void(0)" id="daily_time_spent_user_quiz" class="list-group-item">Daily Time Spent per User</a>
+			<a href="javascript:void(0)" id="daily_time_per_user_class_subject" class="list-group-item">Daily Time Spent per User(on the basis of class and subject)</a>
+		</div>
+	</div>
+    <div class="col-sm-9" style="background-color:lavender;">
+		<div class="col-sm-12" style="margin-top:20px; background-color:white; padding:20px;">
+			<form class="form-inline" action="javascript:void(0)" id="month" style="display: none;">
+				<div class="form-group">
+					<label for="startMonth">Start Month:</label>
+					<input type="month" id="startMonth" class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="endMonth">End Month:</label>
+					<input type="month" id="endMonth" class="form-control">
+				</div>
+				<button type="button" class="btn btn-default" id="btn2">Submit</button>
+			</form>
+			<form class="form-inline" action="javascript:void(0)" id="date" style="display: none;">
+				<div class="form-group">
+					<label for="startDt">Start Date:</label>
+					<input type="date" id="startDt" class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="endDt">End Date:</label>
+					<input type="date" id="endDt" class="form-control">
+				</div>
+				<button type="button" class="btn btn-default" id="btn">Submit</button>
+			</form>
+		</div>
+		<div class="col-sm-12" style="margin-top:20px; background-color:white; padding:20px;">
+			<h1 id="title" style="display:none"></h1>
+            <div id="chart_div" style=" display: none; height:400px " >
+                    <div id="design"style="position: absolute;top:50%; left:50%" >
+                        <img src="Preloader_2.gif" >
+                    </div>
+            </div>
+		</div>
+	
+	</div>
+  </div>
+</div>
 
-    <div id="chart_div" style=" display: none"></div>
 </body>
 </html>
