--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>FlipLearn Data Analysis</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<script src="main.js"></script>
+  <title>FlipLearn Data Analysis</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="main.js"></script>
 </head>
 <body style="background-color:lavender;">
 
@@ -57,11 +56,10 @@
 		</div>
 		<div class="col-sm-12" style="margin-top:20px; background-color:white; padding:20px;">
 			<h1 id="title" style="display:none"></h1>
-            <div id="chart_div" style=" display: none; height:400px " >
-                    <div id="design"style="position: absolute;top:50%; left:50%" >
-                        <img src="Preloader_2.gif" >
-                    </div>
-            </div>
+			<div id="chart_div" style=" display: none; height:400px" ></div>
+			<div id="design"style="display: none; position: absolute;top:50%; left:50%" >
+				<img src="Preloader_2.gif" >
+			</div>
 		</div>
 	
 	</div>
