--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
   <title>FlipLearn Data Analysis</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
+  
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.print.min.js" type="text/javascript"></script>
+
 </head>
 <body style="background-color:lavender;">
 
@@ -17,16 +30,17 @@
   <div class="row" id="list">
     <div class="col-sm-3" style="background-color:lavender;">
 		<div class="list-group" style="margin:20px 0;">
-			<a href="javascript:void(0)" id="school_range" class="list-group-item">School Range</a>
-			<a href="javascript:void(0)" id="school_strength" class="list-group-item">School Strength</a>
-			<a href="javascript:void(0)" id="user_info" class="list-group-item">User Information</a>
-			<a href="javascript:void(0)" id="daily_quiz_class_subject" class="list-group-item">Daily quizzes (on the basis of class and subject)</a>
-			<a href="javascript:void(0)" id="daily_quiz_count" class="list-group-item">Daily quizzes</a>
-			<a href="javascript:void(0)" id="daily_user_class_subject" class="list-group-item">Daily Users (on the basis of class and subject)</a>
-			<a href="javascript:void(0)" id="daily_users_count_quiz" class="list-group-item">Daily Users</a>
-			<a href="javascript:void(0)" id="quiz_played_per_user" class="list-group-item">No of quizzes played per user</a>
-			<a href="javascript:void(0)" id="daily_time_spent_user_quiz" class="list-group-item">Daily Time Spent per User</a>
-			<a href="javascript:void(0)" id="daily_time_per_user_class_subject" class="list-group-item">Daily Time Spent per User(on the basis of class and subject)</a>
+			<a href="javascript:void(0)" id="school_range" class="list-group-item">Monthly School Count based on User Range</a>
+			<a href="javascript:void(0)" id="school_strength" class="list-group-item">Daily Active Users per School</a>
+			<a href="javascript:void(0)" id="user_info" class="list-group-item">Daily Active User Information</a>
+			<a href="javascript:void(0)" id="daily_quiz_count" class="list-group-item">Daily Assessments Count Taken</a>
+			<a href="javascript:void(0)" id="daily_quiz_class_subject" class="list-group-item">Daily Assessments Taken per Class per Subject</a>
+			<a href="javascript:void(0)" id="daily_users_count_quiz" class="list-group-item">Daily User Count taking Assessments</a>
+			<a href="javascript:void(0)" id="daily_user_class_subject" class="list-group-item">Daily User Count taking Assessments per Class per Subject</a>
+			<a href="javascript:void(0)" id="quiz_played_per_user" class="list-group-item">Daily Count of Assessments per User</a>
+			<a href="javascript:void(0)" id="daily_time_spent_user_quiz" class="list-group-item">Daily Time Spent per User in Assessments</a>
+			<a href="javascript:void(0)" id="daily_time_per_user_class_subject" class="list-group-item">Daily Time Spent per User in Assessments per Class per Subject</a>
+			<a href="javascript:void(0)" id="doubt_forum_counts" class="list-group-item">Doubt Forum Count</a>
 		</div>
 	</div>
     <div class="col-sm-9" style="background-color:lavender;">
@@ -55,10 +69,14 @@
 			</form>
 		</div>
 		<div class="col-sm-12" style="margin-top:20px; background-color:white; padding:20px;">
-			<h1 id="title" style="display:none"></h1>
+			<h4 id="title" style="display:none"></h4>
 			<div id="chart_div" style=" display: none; height:400px" ></div>
 			<div id="design"style="display: none; position: absolute;top:50%; left:50%" >
 				<img src="Preloader_2.gif" >
+			</div>
+			<div class="alert alert-danger alert-dismissible fade in" style="display:none" id="alert">
+				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+				<strong>Danger!</strong> <span id='alertMsg'></span>
 			</div>
 		</div>
 	
